--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,7 +14,15 @@
   <body>
     {% include 'navbar.html' %}
 
-    <div class="container">{% block content %} {% endblock %}</div>
+    <div class="container">
+      {% block content %} 
+      {% if messages %} 
+      {% for message in messages %}
+        {{message}}
+      {% endfor %}
+      {% endif %} 
+      {% endblock %}
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
