--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,39 @@
 {% extends 'base.html' %} {% block content %}
 
-<h1>hello world</h1>
+<div class="col-md-6 offset-md-3">
+  {% if user.is_authenticated %}
 
-{% endblock %}
+  <h1>hello world</h1>
+
+  {% else %}
+  <h1>Login</h1>
+  <br />
+  <form method="POST" action="{% url 'home' %}">
+    {% csrf_token %}
+    <form>
+      <div class="mb-3">
+        <input
+          type="text"
+          class="form-control"
+          name="first_name"
+          ,
+          placeholder="Username"
+          required
+        />
+      </div>
+      <br />
+      <div class="mb-3">
+        <input
+          type="password"
+          class="form-control"
+          name="password"
+          placeholder="Password"
+          required
+        />
+      </div>
+      <button type="submit" class="btn btn-secondary">Login</button>
+    </form>
+  </form>
+</div>
+
+{% endif %} {% endblock %}
